# kgz

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
docs/: AGENT_GUIDE.md  _config.yml  guide.md  index.md
docs/_layouts/: default.html
kgz/: __init__.py  audit.py  cache.py  cli.py  file_ops.py  health.py  kernel.py  notify.py  profiles.py  quota.py  sync.py
tests/: test_cache.py  test_cell_result.py  test_cli.py  test_file_ops.py  test_kernel.py  test_quota.py  test_sync.py
