[project]
name = "kgz"
version = "0.1.0"
description = "Execute code on remote Kaggle Jupyter kernels from your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Taha Bouhsine" },
]
keywords = ["kaggle", "jupyter", "remote", "gpu", "tpu", "notebook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "websocket-client>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
kgz = "kgz.cli:main"

[project.urls]
Homepage = "https://github.com/mlnomadpy/kgz"
Issues = "https://github.com/mlnomadpy/kgz/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
